Bug 1489902 - [Wayland/OpenGL] Don't draw to wl_surface owned by GtkWidget (mozcontainer) until it's commited, r=jhorak

Use frame callback to determine if we can draw to wl_surface owned by GtkWidget and use it as a base for EGL Window.

Differential Revision: https://phabricator.services.mozilla.com/D13722

--HG--
extra : moz-landing-system : lando